<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/mainPage_listView_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/registerPage_topHeight"
        android:background="@color/mainPage_top_color">

        <TextView
            android:id="@+id/settingPassword_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:drawablePadding="@dimen/mineSetting_cancelButton_dis"
            android:drawableLeft="@mipmap/goback_image"
            android:layout_marginLeft="@dimen/uploadRecord_topBar_patientImage_toRight"
            android:text="@string/uploadRecord_goBackText"
            android:textSize="@dimen/uploadRecord_topBar_backButton_textSize"
            android:textColor="@color/uploadRecord_topTextColor" />

        <TextView
            android:id="@+id/settingPassword_topText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/uploadRecord_topTextColor"
            android:textSize="@dimen/uploadRecord_topBar_patientName_textSize"
            android:text="@string/forgetPassword_topText" />
    </RelativeLayout>

    <com.sjaiwl.app.tools.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/settingPassword_beforeLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="@dimen/settingPassword_toTop"
                    android:layout_marginLeft="@dimen/registerPage_toTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settingPassword_editTextTopHint" />

                <View
                    android:layout_marginTop="@dimen/settingPassword_toTop"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/filePage_tabHost_below_gap"
                    android:background="@color/filePage_tabHost_gap_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/registerPage_topHeight"
                    android:orientation="horizontal"
                    android:background="@color/registerPage_barBackground">

                    <EditText
                        android:id="@+id/settingPassword_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/registerPage_toTop"
                        android:layout_marginRight="@dimen/registerPage_toTop"
                        android:background="@null"
                        android:password="true"
                        android:layout_gravity="center"
                        android:hint="@string/settingPassword_editTextHint"
                        android:textColorHint="@color/registerPage_editTextHintColor"
                        android:imeOptions="actionDone"
                        android:maxLength="@integer/registerPage_userPasswordMaxLength"
                        android:singleLine="true"
                        android:textColor="@color/registerPage_editTextColor"
                        android:textSize="@dimen/registerPage_editTextSize" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/filePage_tabHost_below_gap"
                    android:background="@color/filePage_tabHost_gap_color" />

                <CheckBox
                    android:id="@+id/settingPassword_checkBox"
                    android:layout_marginTop="@dimen/settingPassword_toTop"
                    android:layout_marginLeft="@dimen/registerPage_toTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settingPassword_showingPassword" />

                <RelativeLayout
                    android:id="@+id/settingPassword_actionDone"
                    android:layout_marginTop="@dimen/registerPage_toTop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/registerPage_topHeight"
                    android:background="@color/mainPage_listItem_uploadButton_record">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/uploadRecord_topTextColor"
                        android:textSize="@dimen/uploadRecord_topBar_patientName_textSize"
                        android:text="@string/settingPassword_actionDone" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingPassword_afterLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:layout_marginTop="@dimen/registerPage_toTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/settingPassword_afterDoneButtonText"
                    android:text="@string/settingPassword_afterDoneText" />

                <RelativeLayout
                    android:id="@+id/settingPassword_afterActionDone"
                    android:layout_marginTop="@dimen/registerPage_toTop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/registerPage_topHeight"
                    android:background="@color/mainPage_listItem_uploadButton_record">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/uploadRecord_topTextColor"
                        android:textSize="@dimen/uploadRecord_topBar_patientName_textSize"
                        android:text="@string/settingPassword_afterDoneButtonText" />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </com.sjaiwl.app.tools.MyScrollView>
</LinearLayout>